[package]
name = "honggfuzz"
version = "0.5.54"
edition = "2018"
authors = ["Paul Grandperrin <paul.grandperrin@gmail.com>"]
license = "MIT/Apache-2.0/Unlicense/WTFPL"
repository = "https://github.com/rust-fuzz/honggfuzz-rs"
documentation = "https://docs.rs/honggfuzz"
homepage = "https://github.com/rust-fuzz/honggfuzz-rs/blob/master/README.md"
readme = "README.md"
keywords = ["fuzzer", "fuzzing", "testing", "security", "property"]
categories = ["command-line-utilities", "development-tools::testing", "development-tools::cargo-plugins", "development-tools::debugging"]
description = """
Fuzz your Rust code with Google-developped Honggfuzz !
"""

exclude = [
	"/honggfuzz/examples/**",
	"/honggfuzz/hfuzz_cc/**",
	"/honggfuzz/**/*.png",
	"/honggfuzz/includes/**",
]

[badges]
travis-ci = { repository = "rust-fuzz/honggfuzz-rs", branch = "master" }
maintenance = { status = "actively-developed" }

[features]

[dependencies]
arbitrary = "1"
rustc_version = "0.3.3"
structopt = { version = "0.3" }
anyhow = "1.0"
log = "0.4"
fs-err = "2.5"
which = "4.1"
pretty_env_logger = "0.4"

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"

# extra dependency for compilation /w cargo-hfuzz run
[target.'cfg(fuzzing)'.dependencies]
lazy_static = "1.4"

# extra dependency for compilation /w cargo-hfuzz debug
[target.'cfg(fuzzing_debug)'.dependencies]
memmap = "0.7"

[[bin]]
name = "cargo-hfuzz"
